@@ -558,6 +558,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * Fix backup dump text prefetch for XMLReader constant changes in PHP 5.1
 * Suppress useless percentage indicator on output from 7za during dumps
 * (bug 4633) Add (previous 200) (next 200) also above catlinks
+* (bug 4686) Fix regression where ?diff=0&oldid=0 caused fatal error on
+  pages with only one revision. Fixes message diff link on first edit.
 
 
 === Caveats ===
